# onchain-hunter

./: .env.example  .gitignore  README.md  TASK.md  config.yaml  pyproject.toml  requirements.txt
.agents/skills/testing-scoring-pipeline/: SKILL.md
.github/workflows/: ci.yml
data/: candidate_hyperliquid_wallets.csv
scripts/: collect_leaderboard.py  run_daily.py
src/: __init__.py
src/collectors/: __init__.py  defillama.py  hyperliquid.py  hyperliquid_leaderboard.py
src/discovery/: __init__.py  db.py  discovery_report.py  event_winners.py
src/reports/: markdown.py
src/scoring/: __init__.py  filters.py  perp_score.py  yield_score.py
src/utils/: config.py  io.py  logger.py  notify.py  retry.py  scoring.py  time.py
tests/: test_event_detection.py  test_filters.py  test_reports.py  test_scoring.py
