[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onchain-hunter"
version = "0.1.0"
description = "Automated pipeline for identifying high-performance crypto traders and DeFi yield opportunities"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.28",
    "pyarrow>=12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
scraper = ["playwright>=1.40"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
onchain-hunter = "scripts.run_daily:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (scripts use sys.path manipulation)
    "B008",   # function calls in default arguments
    "UP017",  # datetime.UTC alias (requires 3.11+; repo supports 3.10 runtime)
    "RUF001", # ambiguous unicode characters (intentional Japanese/special chars)
    "RUF002", # ambiguous unicode in docstrings
    "RUF012", # mutable class variable annotations
]

[tool.ruff.lint.isort]
known-first-party = ["src", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff.format]
quote-style = "double"
